Fixed alignment issues in Events page

--- a/src/App.css
+++ b/src/App.css
@@ -398,7 +398,6 @@ body {
 .timeline-row .timeline-content h4 {
   margin: 0 0 20px 0;
   overflow: hidden;
-  white-space: nowrap;
   text-overflow: ellipsis;
   line-height: 150%;
 }
